--- a/repdata-005_Project_2.Rmd
+++ b/repdata-005_Project_2.Rmd
@@ -3,6 +3,12 @@ title: "Storm data (or something)"
 output: html_document
 ---
 
+## Synopsis
+
+[at most 10 sentences]
+
+## Data Processing
+
 We load the `dplyr` package for data manipulation and the `ggplot2` package for graphing.
 
 ```{r message = FALSE}
@@ -10,16 +16,10 @@ library("dplyr")
 library("ggplot2")
 ```
 
-## Synopsis
-
-[at most 10 sentences]
-
-## Data Processing
-
-Despite being a compressed file, `read.csv` has no trouble parsing it.
+Despite being a compressed file, `read.csv` has no trouble parsing the data file.
 
 ```{r cache = TRUE}
-storm_data <- read.csv("repdata-data-StormData.csv.bz2", stringsAsFactors = FALSE)
+storm_data_raw <- read.csv("repdata-data-StormData.csv.bz2", stringsAsFactors = FALSE)
 ```
 
 We will `select` only the columns that pertain to our questions:
@@ -34,7 +34,7 @@ We will `select` only the columns that pertain to our questions:
 * `REMARKS`: remarks added by the person recording the data.
 
 ```{r cache = TRUE}
-storm_data2 <- storm_data %>%
+storm_data <- storm_data_raw %>%
     select(EVTYPE, FATALITIES, INJURIES, PROPDMG, PROPDMGEXP,
            CROPDMG, CROPDMGEXP, REMARKS)
 ```
@@ -48,14 +48,14 @@ Therefore, to get accurate damage estimates, we need to multiply our damages by 
 The bad news is that there is some messiness in the variables `PROPDMGEXP` and `CROPDMGEXP`.
 
 ```{r}
-summary(storm_data2$PROPDMGEXP)
-summary(storm_data2$CROPDMGEXP)
+table(storm_data$PROPDMGEXP)
+table(storm_data$CROPDMGEXP)
 ```
 
-The good news is that there aren't many too many cases that have strange entries in this field. One possibiility is that the numerical digits may have been recorded by people assuming that this field was for the power of ten required (i.e., $3000 = 3.00 \times 10^{3}$). This would be especially problematic for our analysis for large powers of 10, indicating dollar figures possibly in the millions or more. We examine these specific entries for clues:
+The good news is that there aren't many too many cases that have strange entries in this field. One possibiility is that the numerical digits may have been recorded by people assuming that this field was for the power of ten required for scientific notation (i.e., $3000 = 3.00 \times 10^{3}$). This would be especially problematic for our analysis for large powers of 10, indicating dollar figures possibly in the millions or more. We examine these specific entries for clues:
 
 ```{r}
-storm_data2 %>%
+storm_data %>%
     filter(PROPDMGEXP %in% 5:8) %>%
     select(EVTYPE, PROPDMG, PROPDMGEXP, REMARKS) %>%
     arrange(PROPDMGEXP)
@@ -64,20 +64,75 @@ storm_data2 %>%
 
 To begin with, the multipliers will make no difference to a bunch of entries where the damage in `PROPDMG` is recorded as 0.0, even though it is clear in most of the accompanying remarks that there was, indeed, damage. But even for those cases with nonzero figures, the remarks are not easy to reconcile to the figures. For example, the entry labeled `## 2` in the output above mentions several destroyed buildings including a home valued at $250,000 to $300,000. However, the propery damage is recorded as PROPDMG = 1.7 and PROPDMGEXP = 5. Note that $1.7 \times 10^5$ is 170,000, nowhere near high enough. Similar problems exist in trying to reconcile most of the other damage figures above with remarks that seem off by orders of magnitude.
 
-Given the small number of cases involved here, it seems best to ignore the mysterious entries and focus on the cases with "k", "K", "m", "M", and "B".
+Given the relatively small number of cases involved here, it seems best to ignore the mysterious entries and focus on the cases with "k", "K", "m", "M", and "B". (Anything else will get assigned to 1 so that the multiplier causes no change in the value.) We will do this with `PROPDMG` and `CROPDMG`.
 
-```{r}
-PROPDMGEXP_value <- sapply(storm_data2$PROPDMGEXP,
+```{r cache = TRUE}
+PROPDMGEXP_value <- sapply(storm_data$PROPDMGEXP,
     function(x) {switch(x,  "k" = 1000, "K" = 1000,
                             "m" = 1000000, "M" = 1000000, 
                             "B" = 1000000000, 1)})
-storm_data3 <- storm_data2 %>%
+
+CROPDMGEXP_value <- sapply(storm_data$CROPDMGEXP,
+    function(x) {switch(x,  "k" = 1000, "K" = 1000,
+                            "m" = 1000000, "M" = 1000000, 
+                            "B" = 1000000000, 1)})
+storm_data <- storm_data %>%
     mutate(PROPDMG_value = PROPDMGEXP_value,
-            PROPDMG_actual = PROPDMG * PROPDMG_value)
+           CROPDMG_value = CROPDMGEXP_value,
+           PROPDMG_actual = PROPDMG * PROPDMG_value,
+           CROPDMG_actual = CROPDMG * CROPDMG_value)
 ```
 
 
-
-
 ## Results
+
+### 1. Across the United States, which types of events (as indicated in the `EVTYPE` variable) are most harmful with respect to population health?
+
+First, we get the totals for all the quantities of interest.
+
+```{r cache = TRUE}
+storm_impact <- storm_data %>%
+    group_by(EVTYPE) %>%
+    summarize(fatalities = sum(FATALITIES), injuries = sum(INJURIES),
+              property_damage = sum(PROPDMG_actual),
+              crop_damage = sum(CROPDMG_actual))
+```
+
+
+Simple tables suffice here. We look at the top 10 events that cause the most fatalities and injuries respectively.
+
+```{r results = 'asis'}
+storm_impact %>%
+    select(EVTYPE, fatalities) %>%
+    arrange(desc(fatalities)) %>%
+    head(10) %>%
+    format(big.mark = ",") %>%
+    knitr::kable("markdown", align = c('l', 'r'))
+storm_impact %>%
+    select(EVTYPE, injuries) %>%
+    arrange(desc(injuries)) %>%
+    head(10) %>%
+    format(big.mark = ",") %>%
+    knitr::kable("markdown", align = c('l', 'r'))
+```
+
+### 2. Across the United States, which types of events have the greatest economic consequences?
+
+We look at similar tables for property damage and crop damage (in dollars) to assess economic impact.
+
+```{r results = 'asis'}
+options(scipen = 10)
+storm_impact %>%
+    select(EVTYPE, property_damage) %>%
+    arrange(desc(property_damage)) %>%
+    head(10) %>%
+    format(big.mark = ",") %>%
+    knitr::kable("markdown", align = c('l', 'r'))
+storm_impact %>%
+    select(EVTYPE, crop_damage) %>%
+    arrange(desc(crop_damage)) %>%
+    head(10) %>%
+    format(big.mark = ",") %>%
+    knitr::kable("markdown", align = c('l', 'r'))
+```
 
