--- a/repdata-005_Project_2.Rmd
+++ b/repdata-005_Project_2.Rmd
@@ -1,45 +1,110 @@
 ---
-title: "Storm data (or something)"
-output: html_document
+title: "Human and Economic Costs of Severe Weather Events"
+output:
+  html_document:
+    keep_md: yes
 ---
 
 ## Synopsis
 
-[at most 10 sentences]
+The NOAA records data on U.S. weather. Storms and other extreme weather events are reported along with their associated effects on human life, injury, property, and crops. In this report, we explore the data from 1950--2011 and determine those weather events that have caused the most harm in terms of human and economic costs.
 
 ## Data Processing
 
-We load the `dplyr` package for data manipulation and the `ggplot2` package for graphing.
+We load the `dplyr` package for data manipulation, the `lubridate` package for working with dates, and the `ggplot2` package for graphing. We will also load Winston Chang's helpful `multiplot` function:
 
 ```{r message = FALSE}
 library("dplyr")
+library("lubridate")
 library("ggplot2")
+# Multiple plot function
+#
+# ggplot objects can be passed in ..., or to plotlist (as a list of ggplot objects)
+# - cols:   Number of columns in layout
+# - layout: A matrix specifying the layout. If present, 'cols' is ignored.
+#
+# If the layout is something like matrix(c(1,2,3,3), nrow=2, byrow=TRUE),
+# then plot 1 will go in the upper left, 2 will go in the upper right, and
+# 3 will go all the way across the bottom.
+#
+multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
+  require(grid)
+
+  # Make a list from the ... arguments and plotlist
+  plots <- c(list(...), plotlist)
+
+  numPlots = length(plots)
+
+  # If layout is NULL, then use 'cols' to determine layout
+  if (is.null(layout)) {
+    # Make the panel
+    # ncol: Number of columns of plots
+    # nrow: Number of rows needed, calculated from # of cols
+    layout <- matrix(seq(1, cols * ceiling(numPlots/cols)),
+                    ncol = cols, nrow = ceiling(numPlots/cols))
+  }
+
+ if (numPlots==1) {
+    print(plots[[1]])
+
+  } else {
+    # Set up the page
+    grid.newpage()
+    pushViewport(viewport(layout = grid.layout(nrow(layout), ncol(layout))))
+
+    # Make each plot, in the correct location
+    for (i in 1:numPlots) {
+      # Get the i,j matrix positions of the regions that contain this subplot
+      matchidx <- as.data.frame(which(layout == i, arr.ind = TRUE))
+
+      print(plots[[i]], vp = viewport(layout.pos.row = matchidx$row,
+                                      layout.pos.col = matchidx$col))
+    }
+  }
+}
 ```
 
-Despite being a compressed file, `read.csv` has no trouble parsing the data file.
+
+Although the data comes in a compressed format, `read.csv` has no trouble parsing it.
 
 ```{r cache = TRUE}
-storm_data_raw <- read.csv("repdata-data-StormData.csv.bz2", stringsAsFactors = FALSE)
+storm_data_raw <- read.csv("repdata-data-StormData.csv.bz2",
+                           stringsAsFactors = FALSE)
 ```
 
 We will `select` only the columns that pertain to our questions:
 
 * `EVTYPE`: the event type,
+* `BGN_DATE`: the date of the event,
 * `FATALITIES`: the number of fatalities that resulted,
 * `INJURIES`: the number of injuries that resulted,
 * `PROPDMG`: an estimate for the amount of property damage,
 * `PROPDMGEXP`: a "multiplier" extension for the amount in `PROPDMG`,
-* `CROPDMG`: an estimate for the amount of crop damage, in dollars,
+* `CROPDMG`: an estimate for the amount of crop damage,
 * `CROPDMGEXP`: a "multiplier" extension for the amount in `CROPDMG`,
 * `REMARKS`: remarks added by the person recording the data.
 
 ```{r cache = TRUE}
 storm_data <- storm_data_raw %>%
-    select(EVTYPE, FATALITIES, INJURIES, PROPDMG, PROPDMGEXP,
+    select(EVTYPE, BGN_DATE, FATALITIES, INJURIES, PROPDMG, PROPDMGEXP,
            CROPDMG, CROPDMGEXP, REMARKS)
 ```
 
-In the instructions for storm data preparation (located [here](https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf)), we read,
+First, we'll deal with the `BGN_DATE` variable. As we're not concerned about the time of day (and it's not even recorded in many cases), we will extract only the date.
+
+```{r cache = TRUE}
+date <- storm_data$BGN_DATE %>%
+    strsplit(" ") %>%
+    unlist %>%
+    matrix(nrow = length(storm_data$BGN_DATE), ncol = 2, byrow = TRUE)
+date <- as.Date(date[,1], format = "%m/%d/%Y")
+storm_data <- storm_data %>%
+    mutate(date = date)
+rm(date)
+```
+
+
+Next, we'll calculate the property and crop damage in dollars. In the instructions for storm data preparation (located [here](https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf)), we read,
 
 >Estimates should be rounded to three significant digits, followed by an alphabetical character signifying the magnitude of the number, i.e., 1.55B for $1,550,000,000. Alphabetical characters used to signify magnitude include “K” for thousands, “M” for millions, and “B” for billions.
 
@@ -81,6 +146,8 @@ storm_data <- storm_data %>%
            CROPDMG_value = CROPDMGEXP_value,
            PROPDMG_actual = PROPDMG * PROPDMG_value,
            CROPDMG_actual = CROPDMG * CROPDMG_value)
+rm(PROPDMGEXP_value)
+rm(CROPDMGEXP_value)
 ```
 
 
@@ -88,33 +155,54 @@ storm_data <- storm_data %>%
 
 ### 1. Across the United States, which types of events (as indicated in the `EVTYPE` variable) are most harmful with respect to population health?
 
-First, we get the totals for all the quantities of interest.
+First, we get totals for all the quantities of interest.
 
 ```{r cache = TRUE}
 storm_impact <- storm_data %>%
     group_by(EVTYPE) %>%
-    summarize(fatalities = sum(FATALITIES), injuries = sum(INJURIES),
-              property_damage = sum(PROPDMG_actual),
-              crop_damage = sum(CROPDMG_actual))
+    summarize(Fatalities = sum(FATALITIES),
+              Injuries = sum(INJURIES),
+              Property_damage = sum(PROPDMG_actual),
+              Crop_damage = sum(CROPDMG_actual))
 ```
 
 
-Simple tables suffice here. We look at the top 10 events that cause the most fatalities and injuries respectively.
+Simple tables suffice here. We look at the top 10 events that have caused the most fatalities and injuries respectively.
 
 ```{r results = 'asis'}
 storm_impact %>%
-    select(EVTYPE, fatalities) %>%
-    arrange(desc(fatalities)) %>%
+    select(EVTYPE, Fatalities) %>%
+    arrange(desc(Fatalities)) %>%
     head(10) %>%
     format(big.mark = ",") %>%
     knitr::kable("markdown", align = c('l', 'r'))
 storm_impact %>%
-    select(EVTYPE, injuries) %>%
-    arrange(desc(injuries)) %>%
+    select(EVTYPE, Injuries) %>%
+    arrange(desc(Injuries)) %>%
     head(10) %>%
     format(big.mark = ",") %>%
     knitr::kable("markdown", align = c('l', 'r'))
 ```
+
+It is clear that tornadoes are by far the most destructive natural force when it comes to safety and human life.
+
+```{r message = FALSE}
+tornadoes <- storm_data %>%
+    filter(EVTYPE == "TORNADO") %>%
+    group_by(Year = year(date)) %>%
+    summarize(Fatalities = sum(FATALITIES), Injuries = sum(INJURIES))
+g1 <- ggplot(tornadoes, aes(x = Year, y = Fatalities)) +
+    ggtitle("Tornadoes in the U.S. (1950-2011)") +
+    xlab(NULL) +
+    scale_x_continuous(breaks=seq(1950,2011,10)) +
+    geom_line()
+g2 <- ggplot(tornadoes, aes(x = Year, y = Injuries)) +
+    scale_x_continuous(breaks=seq(1950,2011,10)) +
+    geom_line()
+multiplot(g1, g2)
+```
+
+The figure shows that there are specific years in which tornadoes are particularly devastating. In particular, 2011 was one of the worst years on record. (See [this Wikipedia page](https://en.wikipedia.org/wiki/April_25%E2%80%9328,_2011_tornado_outbreak#April_27_event).)
 
 ### 2. Across the United States, which types of events have the greatest economic consequences?
 
@@ -123,16 +211,17 @@ We look at similar tables for property damage and crop damage (in dollars) to as
 ```{r results = 'asis'}
 options(scipen = 10)
 storm_impact %>%
-    select(EVTYPE, property_damage) %>%
-    arrange(desc(property_damage)) %>%
+    select(EVTYPE, Property_damage) %>%
+    arrange(desc(Property_damage)) %>%
     head(10) %>%
     format(big.mark = ",") %>%
     knitr::kable("markdown", align = c('l', 'r'))
 storm_impact %>%
-    select(EVTYPE, crop_damage) %>%
-    arrange(desc(crop_damage)) %>%
+    select(EVTYPE, Crop_damage) %>%
+    arrange(desc(Crop_damage)) %>%
     head(10) %>%
     format(big.mark = ",") %>%
     knitr::kable("markdown", align = c('l', 'r'))
 ```
 
+There is a difference in the weather event taking the top spot for property damage versus crop damage.  Floods cause more than double the amount of property damage than the next highest event (hurricane/typhoon). Flooding also causes a lot of crop damage, but drought is more than twice as damaging to crops.
